--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1156,19 +1156,21 @@ section .container {
   left: 0;
   bottom: 0;
   padding: 15px;
-  text-align: right;
-  font-size: 13px;
+  text-align: left;
+  font-size: 12px;
   color: #fff;
-  z-index: 999999;
+  z-index: 1;
+  font-weight: 500;
 }
 
-/* @media (max-width: 992px) {
+@media (max-width: 992px) {
   .credits {
     text-align: center;
     padding: 10px;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.2);
+    font-weight: 200;
   }
-} */
+}
 
 .credits a {
   color: #18d26e;
