--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1159,7 +1159,7 @@ section .container {
   text-align: left;
   font-size: 12px;
   color: #fff;
-  z-index: 1;
+  z-index: 9999999;
 }
 
 @media (max-width: 992px) {
