--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,10 +369,11 @@ section .container {
   margin: -15px 0 15px 0;
   font-size: 36px;
   font-weight: 700;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-family: "Poppins", sans-serif;
   color: #fff;
 }
+
 
 /*--------------------------------------------------------------
 # About
@@ -1160,14 +1161,16 @@ section .container {
   font-size: 12px;
   color: #fff;
   z-index: 9999999;
+  background: rgba(0, 0, 0, 0.7);
 }
 
 @media (max-width: 992px) {
   .credits {
     text-align: center;
     padding: 10px;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.7);
     font-weight: 200;
+    z-index: 9999999;
   }
 }
 
